--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ commands = flake8 person tests
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
@@ -21,5 +22,5 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir}
-
+    pytest --basetemp={envtmpdir} --cov=person
+    codecov -e TOXENV
