--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,6 @@
 [pytest]
-addopts = --color=yes --cov=person tests/ --cov-report=xml --cov-report=term -ra
+addopts = --color=yes
+# --cov=person/tests/ --cov-report=xml --cov-report=term -ra
 filterwarnings =
 log_cli = 1
 log_cli_level = INFO
