--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py37, py38, flake8
+envlist = py38, flake8
 
 [travis]
 python =
     3.8: py38
-    3.7: py37
 
 [testenv:flake8]
 basepython = python
@@ -14,7 +13,7 @@ commands = flake8 person tests
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = CI TRAVIS TRAVIS_* CODECOV_*
 deps =
     -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
@@ -22,5 +21,4 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir} --cov=person
-    codecov -e TOXENV
+    pytest --basetemp={envtmpdir}
