--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,13 @@
+[check-manifest]
+ignore =
+   *.png
+   CACHEDIR.TAG
+   lastfailed
+   nodeids
+   stepwise
+   README.md
+   .editorconfig
+
 [flake8]
 exclude =
     .git,
