Still struggling with rendering of .rst on pypi

--- a/tox.ini
+++ b/tox.ini
@@ -16,9 +16,13 @@ setenv =
 passenv = CI TRAVIS TRAVIS_* CODECOV_*
 deps =
     -r{toxinidir}/requirements_dev.txt
+    codecov
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
     pytest --basetemp={envtmpdir}
+
+CODECOV_TOKEN="edcb046a-1e26-4407-bf70-6150cf15fa38"
+
