Added pre-commit routine with black and flake8

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 # See https://pre-commit.com/ for usage and config
 repos:
-- repo: local
+- repo: ./person/
+  # - repo: local
   hooks:
   - id: isort
     name: isort
