--- a/tox.ini
+++ b/tox.ini
@@ -16,12 +16,14 @@ commands =
 ;    bash -c 'find . | grep -E "(__pycache__|\.pyc|\.pyo$)" | xargs rm -rf'
     python -m pip check
     python -m pytest {posargs}
+    codecov
 setenv =
     PYTHONPATH = {toxinidir}
     PIP_LOG={envdir}/pip.log
     PIP_DISABLE_PIP_VERSION_CHECK=1
     # Avoid 2020-01-01 warnings: https://github.com/pypa/pip/issues/6207
     PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
+    CODECOV_TOKEN=edcb046a-1e26-4407-bf70-6150cf15fa38
 passenv =
     CI
     CODECOV_*
