--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@
 language: python
 python:
   - 3.8
-
+env:
+  - TOX_ENV=py38
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install: pip install -U tox-travis
 
 # Command to run tests, e.g. python setup.py test
-script: tox
+script: tox -e $TOX_ENV
 
 # Assuming you have installed the travis-ci CLI tool, after you
 # create the Github repo and add it to Travis, run the
@@ -24,10 +25,5 @@ deploy:
     tags: true
     repo: 0LL13/person
     python: 3.8
-
-[testenv]
-passenv =
-    CI
-    TRAVIS
-    TRAVIS_*
-    CODECOV_*
+after_success:
+  - codecov -e TOX_ENV
