--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-* linguist-vendored
-* .py linguist-vendored=true
-* .html linguist-vendored=false
-* .js linguist-vendored=false
+* linguist-language=Python
