--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ alabaster==0.7.12
 appdirs==1.4.4
 attrs==20.1.0
 babel==2.8.0
+bandit==1.6.2
 beautifulsoup4==4.9.1
 black==19.10b0
 bleach==3.1.5
@@ -22,6 +23,8 @@ docutils==0.16
 filelock==3.0.12
 flake8==3.8.3
 gender-guesser==0.4.0
+gitdb==4.0.5
+gitpython==3.1.7
 identify==1.4.29
 idna==2.10
 imagesize==1.2.0
@@ -39,6 +42,7 @@ mypy==0.782
 nodeenv==1.5.0
 packaging==20.4
 pathspec==0.8.0
+pbr==5.4.5
 pep517==0.8.2
 pkginfo==1.5.0.1
 pluggy==0.13.1
@@ -61,6 +65,7 @@ restructuredtext-lint==1.3.1
 rfc3986==1.4.0
 secretstorage==3.1.2 ; sys_platform == 'linux'
 six==1.15.0
+smmap==3.0.4
 snowballstemmer==2.0.0
 soupsieve==2.0.1
 sphinx-rtd-theme==0.5.0
@@ -71,6 +76,7 @@ sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+stevedore==3.2.0
 toml==0.10.1
 tox==3.19.0
 tqdm==4.48.2
