--- a/requirements.txt
+++ b/requirements.txt
@@ -15,13 +15,15 @@ chardet==3.0.4
 check-manifest==0.42
 click==7.1.2
 codecov==2.1.9
-colorama==0.4.3
+colorama==0.4.3 ; python_version > '3.4'
 coverage==5.2.1
 cryptography==3.1
 distlib==0.3.1
 docutils==0.16
 filelock==3.0.12
+flake8-polyfill==1.0.2
 flake8==3.8.3
+future==0.18.2
 gender-guesser==0.4.0
 gitdb==4.0.5
 gitpython==3.1.7
@@ -29,16 +31,21 @@ identify==1.4.29
 idna==2.10
 imagesize==1.2.0
 iniconfig==1.0.1
+ipython-genutils==0.2.0
 isort==5.4.2
 jeepney==0.4.3 ; sys_platform == 'linux'
 jinja2==3.0.0a1
+jsonschema==3.2.0
+jupyter-core==4.6.3
 keyring==21.3.1
 lxml==4.5.2
+mando==0.6.4
 markupsafe==2.0.0a1
 mccabe==0.6.1
 more-itertools==8.4.0
 mypy-extensions==0.4.3
 mypy==0.782
+nbformat==5.0.7
 nodeenv==1.5.0
 packaging==20.4
 pathspec==0.8.0
@@ -47,16 +54,19 @@ pep517==0.8.2
 pkginfo==1.5.0.1
 pluggy==0.13.1
 pre-commit==2.7.1
+progress==1.5
 py==1.9.0
 pycodestyle==2.6.0
 pycparser==2.20
 pyflakes==2.2.0
 pygments==2.6.1
 pyparsing==3.0.0a2
+pyrsistent==0.16.0
 pytest-cov==2.10.1
 pytest==6.0.1
 pytz==2020.1
 pyyaml==5.3.1
+radon==4.2.0
 readme-renderer==26.0
 regex==2020.7.14
 requests-toolbelt==0.9.1
@@ -79,6 +89,7 @@ stevedore==3.2.0
 toml==0.10.1
 tox==3.19.0
 tqdm==4.48.2
+traitlets==5.0.0rc2
 twine==3.2.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
