Added .md README

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,8 @@ commands =
 ;    bash -c 'find . | grep -E "(__pycache__|\.pyc|\.pyo$)" | xargs rm -rf'
     python -m pip check
     python -m pytest {posargs}
-    codecov
+;    codecov
+     coverage
 setenv =
     PYTHONPATH = {toxinidir}
     PIP_LOG={envdir}/pip.log
@@ -24,14 +25,16 @@ setenv =
     # Avoid 2020-01-01 warnings: https://github.com/pypa/pip/issues/6207
     PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
     CODECOV_TOKEN=edcb046a-1e26-4407-bf70-6150cf15fa38
+    CODACY_PROJECT_TOKEN=c2999183e7844bb78ac468a4388306d0
 passenv =
     CI
+    COVERAGE*
     CODECOV_*
     TRAVIS*
     TWINE_*
 deps =
     -r{toxinidir}/requirements_dev.txt
-    codecov
+;    codecov
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
