--- a/tox.ini
+++ b/tox.ini
@@ -24,8 +24,8 @@ setenv =
     PIP_DISABLE_PIP_VERSION_CHECK=1
     # Avoid 2020-01-01 warnings: https://github.com/pypa/pip/issues/6207
     PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
-    CODECOV_TOKEN=edcb046a-1e26-4407-bf70-6150cf15fa38
-    CODACY_PROJECT_TOKEN=c2999183e7844bb78ac468a4388306d0
+;    CODECOV_TOKEN=edcb046a-1e26-4407-bf70-6150cf15fa38
+;    CODACY_PROJECT_TOKEN=c2999183e7844bb78ac468a4388306d0
 passenv =
     CI
     COVERAGE*
