--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ chardet==3.0.4
 check-manifest==0.42
 click==7.1.2
 codecov==2.1.9
-colorama==0.4.3 ; python_version > '3.4'
+colorama==0.4.3
+colorlog==4.2.1
 coverage==5.2.1
 cryptography==3.1
 distlib==0.3.1
@@ -27,7 +28,7 @@ future==0.18.2
 gender-guesser==0.4.0
 gitdb==4.0.5
 gitpython==3.1.7
-identify==1.4.30
+identify==1.4.29
 idna==2.10
 imagesize==1.2.0
 iniconfig==1.0.1
@@ -39,22 +40,23 @@ jsonschema==3.2.0
 jupyter-core==4.6.3
 keyring==21.4.0
 lxml==4.5.2
-mando==0.7.0
+mando==0.6.4
 markupsafe==2.0.0a1
 mccabe==0.6.1
 more-itertools==8.5.0
 mypy-extensions==0.4.3
 mypy==0.782
-nbformat==5.0.7
+nbformat==4.4.0
 nodeenv==1.5.0
 packaging==20.4
 pathspec==0.8.0
 pbr==5.4.5
 pep517==0.8.2
 pkginfo==1.5.0.1
+plotly==4.9.0
 pluggy==0.13.1
 pre-commit==2.7.1
-progress==1.5
+progress==1.4
 py==1.9.0
 pycodestyle==2.6.0
 pycparser==2.20
@@ -66,11 +68,12 @@ pytest-cov==2.10.1
 pytest==6.0.1
 pytz==2020.1
 pyyaml==5.3.1
-radon==4.2.0
+radon==4.0.0
 readme-renderer==26.0
 regex==2020.7.14
 requests-toolbelt==0.9.1
 requests==2.24.0
+retrying==1.3.3
 rfc3986==1.4.0
 secretstorage==3.1.2 ; sys_platform == 'linux'
 six==1.15.0
@@ -86,13 +89,15 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 stevedore==3.2.0
+tabulate==0.8.7
 toml==0.10.1
 tox==3.19.0
 tqdm==4.48.2
-traitlets==5.0.0
+traitlets==5.0.0rc2
 twine==3.2.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.25.10
 virtualenv==20.0.31
 webencodings==0.5.1
+wily==1.18.0
