--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
-addopts = --color=yes
-# --cov=person/tests/ --cov-report=xml --cov-report=term -ra
+addopts = 
+    --color=yes
+    --cov-report term-missing
+    --cov=person
+    --cov=./tests/ 
 filterwarnings =
 log_cli = 1
 log_cli_level = INFO
