running pytest-cov with tox

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,9 @@
 [pytest]
 addopts = 
     --color=yes
-    --cov-report term-missing
-    --cov=person
-    --cov=./tests/ 
+#    --cov-report term-missing
+#    --cov=person
+#    --cov=./tests/ 
 filterwarnings =
 log_cli = 1
 log_cli_level = INFO
