--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    clean
     py38
     flake8
     docs
@@ -10,14 +11,10 @@ python =
     3.8: py38
 
 [testenv]
-commands =
-;    pip install -U pip
-;    pytest --basetemp={envtmpdir}
-;    bash -c 'find . | grep -E "(__pycache__|\.pyc|\.pyo$)" | xargs rm -rf'
+commands = 
     python -m pip check
-    python -m pytest {posargs}
-;    codecov
-     coverage
+    pytest --cov --cov-append --cov-report=term-missing
+;    python -m pytest {posargs}
 setenv =
     PYTHONPATH = {toxinidir}
     PIP_LOG={envdir}/pip.log
@@ -32,7 +29,6 @@ passenv =
     TWINE_*
 deps =
     -r{toxinidir}/requirements_dev.txt
-;    codecov
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
@@ -61,3 +57,8 @@ commands =
       --out-dir {toxinidir}/dist/ \
       {toxinidir}
     python -m twine check {toxinidir}/dist/*
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
