running pytest-cov with tox

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
 
 [testenv]
 commands = 
-    python -m pip check
+;    python -m pip check
     pytest --cov --cov-append --cov-report=term-missing
 ;    python -m pytest {posargs}
 setenv =
