running pytest-cov with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,7 @@
+[travis]
+python =
+    3.8: py38
+
 [tox]
 envlist =
     clean
@@ -5,10 +9,6 @@ envlist =
     flake8
     docs
     lint
-
-[travis]
-python =
-    3.8: py38
 
 [testenv]
 commands = 
@@ -28,7 +28,9 @@ passenv =
     TRAVIS*
     TWINE_*
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    pytest
+    pytest-cov
+;    -r{toxinidir}/requirements_dev.txt
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
